fixed spacing on navbar liks

--- a/shophelper.css
+++ b/shophelper.css
@@ -19,3 +19,13 @@ h1, h2, h3 {
   background-color:#5af;
   color:#fff;
 }
+
+.navbar ul {
+  padding-left: 30px;
+}
+
+.navbar li {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
+}
